# Proj-PPP

./: Alunos.txt  CMakeLists.txt  Disciplinas.txt  Exames.txt  Exames_b.txt  main.c
Source Files/: Alunos.c  Alunos.h  Disciplinas.c  Disciplinas.h  Estruturas.h  Exames.c  Exames.h  Ficheiros.c  Ficheiros.h  Menus.c  Menus.h  Protecoes.c  Protecoes.h  Tempo.c  Tempo.h
